fixing overflow

--- a/mobileRes.css
+++ b/mobileRes.css
@@ -133,8 +133,8 @@
     .cards-box {
         min-height: 90%;
         width: 100%;
-        gap: 30px;
-        overflow-x: hidden;
+        gap: 10px;
+        overflow-x: hidden !important;
         overflow-y: visible !important;
     }
 
